--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Este es un sitio web con Github Pages</h1>
     <p>y fue creado para el curso de git y Github de platzi</p>
     <p>
-        <img src="https://i.imgur.comhttps://i.imgur.com/cWxcaK1.gif" alt="">
+        <img src="https://i.imgur.com/cWxcaK1.gif" alt="">
     </p>
 </body>
 </html>
